--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Mi sitio personal</title>
-</head>
-<body>
-  <h1>Hola, soy José</h1>
-  <p>¡Bienvenido a mi página web!</p>
-</body>
-</html>
+---
+layout: default
+title: Inicio
+---
+
+<h2>PROBANDO Jekyll</h2>
+<p>escribir ...</p>
+<ul>
+  <li>Agregar listas</li>
+  <li>Agregar imágenes</li>
+  <li>Y mucho más ... </li>
+</ul>
+  
