_layout, como lo enseño oscar

--- a/notas.html
+++ b/notas.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Notas</title>
-</head>
-<body>
-  <nav>
-    <a href="index.html">Inicio</a> |
-    <a href="alumnos.html">Alumnos</a> |
-    <a href="notas.html">Notas</a>
-  </nav>
+---
+layout: default
+title: Notas
+---
 
-  <h1>Notas del examen</h1>
-  <p>¡Muy bien hecho! Ya sabes crear una estructura web con múltiples páginas.</p>
-</body>
-</html>
+<h1>Notas</h1>
+<p>¡Estás aprendiendo Jekyll como un pro!</p>
