--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Inicio - Mi sitio</title>
-</head>
-<body>
-  <h1>Bienvenido a mi sitio web</h1>
-  <p>¡Hola! Este es mi primer sitio hecho a mano.</p>
+---
+layout: default
+title: Inicio
+---
 
-  <nav>
-    <a href="index.html">Inicio</a> |
-    <a href="about.html">Sobre mí</a> |
-    <a href="contacto.html">Contacto</a>
-  </nav>
-</body>
-</html>
+<h1>Bienvenido a la página principal</h1>
+<p>Este es el inicio del examen usando archivos .html</p>
